--- a/client/src/components/translation/en.json
+++ b/client/src/components/translation/en.json
@@ -3,5 +3,32 @@
         "name": "En Gramma",
         "text": "<p><strong>EN GRAMMA</strong> is a new <strong>Trance-Rock</strong> outfit from Rennes (France).<br/><br/></p><p>The trio performs a powerful blend of <strong>'Afro-Dionysiac' Blues, Acoustic-Rock and minimalist Afrobeat</strong>; whilst singing <strong>in three languages (French, English and Ancient Greek)</strong>. <strong>EN GRAMMA </strong>means \"the trace that memory left\".<br/><br/></p><p><strong>Beau Brûlis</strong> is their debut album. It is a beautiful collection of stories, rooted in mystery and told through warm vocal melodies and catchy tribal rhythms. This is a truly unique and musically eclectic outfit, occupying the space between primitive and modern - acoustic and electric.<br/><br/></p><p><strong>EN GRAMMA</strong> is formed around lead vocalist <strong>Gautier Degandt</strong> who toured across Europe with his hard-folk duo <strong>BÂTON BLEU (Dixiefrog records/ PIAS)</strong>, Afro / Rock guitarist <strong>Oscar Philéas (MAMADOU KOITA)</strong>, and talented percussionist<strong> Pierre-Yves Dubois</strong>.</p>"
  
+    },
+
+    "contact": {
+        "name": "links",
+        "link": "Press kit",
+        "linkTech": "Technical sheet",
+        "pro": "Professional Documents",
+        "button": "Send",
+        "fullname": "Name",
+        "object": "Object"
+      },
+
+    "dates": {
+        "name": "hideshow",
+        "hide": "Show more dates",
+        "show": "Hide dates"
+    },
+
+    "press": {
+        "name": "media",
+        "press": "Press"
+    },
+
+    "radio": {
+        "name": "radio",
+        "world": "Worlwide",
+        "france": "In France"
     }
   }
