translated title in media

--- a/client/src/components/translation/en.json
+++ b/client/src/components/translation/en.json
@@ -29,6 +29,7 @@
     "radio": {
         "name": "radio",
         "world": "Worlwide",
-        "france": "In France"
+        "france": "In France",
+        "title": "The album is now broadcasted:"
     }
   }
