--- a/client/src/components/translation/fr.json
+++ b/client/src/components/translation/fr.json
@@ -29,7 +29,8 @@
   "radio": {
     "name": "radio",
     "world": "Dans le monde",
-    "france": "En France"
+    "france": "En France",
+    "title": "L'album est en ce moment diffusé:"
 }
 }
 
