trasnlated music page

--- a/client/src/components/translation/en.json
+++ b/client/src/components/translation/en.json
@@ -38,5 +38,11 @@
         "home": "HOME",
         "music": "MUSIC",
         "biography": "BIOGRAPHY"
+      },
+
+      "music": {
+        "name": "music",
+        "button": "Find the album",
+        "press": "Press review"
       }
   }
