added rate limiter

--- a/client/src/components/translation/en.json
+++ b/client/src/components/translation/en.json
@@ -43,6 +43,6 @@
       "music": {
         "name": "music",
         "button": "Find the album",
-        "press": "Press review"
+        "press": "Press reviews"
       }
   }
