--- a/client/src/components/translation/fr.json
+++ b/client/src/components/translation/fr.json
@@ -30,7 +30,7 @@
     "name": "radio",
     "world": "Dans le monde",
     "france": "En France",
-    "title": "L'album est en ce moment diffusé:"
+    "title": "L'album est diffusé en ce moment:"
 },
 
   "navbar": {
