--- a/client/src/components/translation/fr.json
+++ b/client/src/components/translation/fr.json
@@ -12,7 +12,8 @@
     "pro": "Documents Pro",
     "button": "Envoyer",
     "fullname": "Nom",
-    "object": "Objet"
+    "object": "Objet",
+    "recaptcha": "fr"
   },
 
   "dates": {
