added more tanslation

--- a/client/src/components/translation/fr.json
+++ b/client/src/components/translation/fr.json
@@ -27,7 +27,9 @@
       "press": "PRESSE",
       "Vplus": "Voir plus",
       "VplusM": "Voir plus d'avis",
-      "VplusR": "Voir plus de radios"
+      "VplusR": "Voir plus de radios",
+      "Vless": "Voir moins"
+
   },
 
   "radio": {
