--- a/client/src/components/translation/en.json
+++ b/client/src/components/translation/en.json
@@ -27,7 +27,8 @@
         "press": "PRESS",
         "Vplus": "Show more",
         "VplusM": "Show more reviews",
-        "VplusR": "Show more radios"
+        "VplusR": "Show more radios",
+        "Vless": "Show less"
     },
 
     "radio": {
